# NPN_OS

./: .gitignore  README.md
npn_os/: .cproject  .project  npn_os.pintool  npn_os.slcp  npn_os.slps  vscode.conf
npn_os/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
npn_os/autogen/: .crc_config.crc
npn_os/config/: sl_board_control_config.h
npn_os/npn_os_cmake/: CMakeLists.txt  CMakePresets.json  npn_os.cmake
